Fix image scaling on mobile

--- a/src/static/css/relaunch.css
+++ b/src/static/css/relaunch.css
@@ -50,6 +50,7 @@ footer li + li {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 h1 {
